--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
 
 <head>
     <title>ProcessMaker Sketch Development Server</title>
+
+    <style>
+        html, body {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            align-items: stretch;
+        }
+    </style>
 </head>
 
 <body>
